# vertex

./: .cursorignore  .flake8  .gitignore  AGENTS.md  LICENSE  MANIFEST.in  Makefile  README.md  README_EN.md  README_ZH.md  STREAM_TOOL_CALLS_FIX.md  TEST_COVERAGE_REPORT.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: README.md  docker-build.yml  pr-precheck.yml  precheck.yml  publish.yml  test.yml
config/: if-else-test.yml  llm.yml  llm.yml.backup  llm.yml.backup2
docker/: .dockerignore  Dockerfile  Dockerfile.dev  Makefile  README.md  build.sh  docker-compose.yml  start.sh  test-start.sh
docs/: AUTO_AGENT_PHILOSOPHY.md  CLI_UNIFICATION.md  CLI_USAGE.md  COMMAND_LINE_TOOL.md  CONFIGURATION_UNIFICATION.md  DEEP_RESEARCH_INTEGRATION.md  DEEP_RESEARCH_INTEGRATION_SUMMARY.md  DESKTOP_APP.md  FUNCTION_TOOLS.md  FUNCTION_TOOLS_MCP_INTEGRATION.md  LLM_MEMORY_ENHANCEMENT_PROPOSAL.md  MCP_CONFIG_MIGRATION.md  MCP_INTEGRATION.md  MCP_QUICK_START.md  MCP_WORKFLOW_USAGE.md  MULTILINGUAL_PROMPTS.md  MULTIMODAL_EXAMPLES.md  MULTIMODAL_FEATURES.md  PRECOMMIT_README.md  PROMPT_JSON_OPTIMIZATION.md  PUBLISHING.md  README.md  SANITIZATION_README.md  TROUBLESHOOTING.md  VERSION_MANAGEMENT.md  WEB_SEARCH_CONFIGURATION.md  WHILE_VERTEX_GROUP.md  WORKFLOW_CHAIN_CALLING.md  WORKFLOW_CHAT_APP.md  WORKFLOW_HISTORY_SUPPORT.md  WORKFLOW_MEMORY.md  vertexflow_memory_design.md
reports/: 深度研究报告_茅台和白酒行业的发展_20250620_015735.md
scripts/: precommit.sh  publish.py  run_core_tests.sh  run_tests.sh  sanitize_config.py  setup_ollama.py  version_bump.py
src/: app.py  langchain_client.py  model_client.py  native_client.py
src/utils/: logger.py
vector_db/: default_meta.pkl
vertex_flow/: __init__.py  cli.py  test_tool_call_events.py  test_tool_execution_fix.py
vertex_flow/config/: __init__.py  config_loader.py  init_config.py  llm.yml  llm.yml.backup2  llm.yml.template  mcp.yml.template  setup_config.py
vertex_flow/docs/: DEDUPLICATION.md  DEEP_RESEARCH_APP.md  DOCUMENT_UPDATE.md  RAG_INSTALL.md  RAG_README.md  README.md  VARIABLES_MECHANISM.md  embedding_vertex.md  finance_tool.md  function_vertex.md  llm_vertex.md  vector_vertex.md  vertex_group.md  web_search.md  while_vertex.md
vertex_flow/examples/: chain_vertex_example.py  command_line_example.py  config_example.py  deduplication_demo.py  deep_research_integration_example.py  deep_research_integration_simple_test.py  finance_example.py  mcp_example.py  mcp_smart_strategy_example.py  memory_example.py  memory_factory_example.py  memory_workflow_example.py  prompt_usage_example.py  rag_example.py  vertex_group_example.py  web_search_example.py  while_vertex_group_example.py  workflow_history_example.py
vertex_flow/mcp/: __init__.py  client.py  server.py  transport.py  types.py  vertex_integration.py
vertex_flow/memory/: __init__.py  factory.py  file_store.py  hybrid_store.py  inmem_store.py  memory.py  rds_store.py  redis_store.py
vertex_flow/plugins/crypto_trading/: .env.example  AGENTS.md  README.md  __init__.py  backtester.py  client.py  config.py  error_handler.py  example.py  exchanges.py  execution_controls.py  indicators.py  manage_futures_orders.py  monitoring.py  persistence.py  position_metrics.py  requirements.txt  risk_manager.py  scheduler.py  show_indicators.py  trading.py
vertex_flow/plugins/wechat/: .dockerignore  .env.example  Dockerfile  README.md  __init__.py  async_processor.py  config.py  docker-compose.yml  example.py  main.py  message_processor.py  requirements.txt  start.sh  wechat_api.py  wechat_crypto.py  wechat_handler.py  wechat_server.py
vertex_flow/prompts/: __init__.py  base.py  deep_research.py
vertex_flow/src/: app.py  chat_util.py  deep_research_app.py  desktop_app.py  langchain_client.py  model_client.py  native_client.py  workflow_app.py
vertex_flow/tests/: __init__.py  conftest.py  test_config_loader.py  test_consecutive_assistant_messages.py  test_debug_mcp_tools.py  test_deep_research_app.py  test_deep_research_workflow.py  test_deepseek_streaming_fix.py  test_duplicate_assistant_fix.py  test_duplicate_detection.py  test_llm_vertex.py  test_mcp_connection.py  test_mcp_debug_print.py  test_mcp_integration.py  test_mem_vertex.py  test_memory_factory.py  test_memory_hybrid.py  test_memory_inmem.py  test_memory_rds.py  test_memory_reader_vertex.py  test_memory_redis.py  test_memory_workflow.py  test_multi_event_stream.py  test_placeholder_replacement.py  test_runtime_tool_call_fix.py  test_simple_stream.py  test_stream_fix.py  test_streaming_output.py  test_streaming_tool_calls_fix.py  test_time_tools.py  test_tool_call_integration.py  test_tool_caller.py  test_tool_caller_integration.py  test_tool_caller_merge.py  test_tool_calls_fix.py  test_tool_integration.py  test_tool_manager.py  test_vertex_group.py  test_vertex_group_exposed_variables_fix.py  test_vertex_group_features.py  (+8 more)
vertex_flow/utils/: logger.py
vertex_flow/workflow/: __init__.py  chat.py  constants.py  context.py  dify_workflow.py  embedding.py  event_channel.py  mcp_manager.py  rag_config.py  rerank.py  service.py  stream_data.py  unified_rag_workflow.py  utils.py  vector.py  workflow.py  workflow_instance.py  workflow_manager.py
vertex_flow/workflow/app/: README_DEEP_RESEARCH.md  __init__.py  analysis_plan_parser.py  app.py  deep_research_workflow.py  finance_message_workflow.py  ragflow.py  ragflow_demo.py  test_deep_research.py
vertex_flow/workflow/edge/: __init__.py  edge.py
vertex_flow/workflow/tools/: command_line.py  finance.py  functions.py  tool_caller.py  tool_manager.py  web_search.py
vertex_flow/workflow/vertex/: __init__.py  context.py  embedding_providers.py  embedding_vertex.py  function_vertex.py  llm_vertex.py  mcp_llm_vertex.py  mem_vertex.py  memory_reader_vertex.py  rerank_vertex.py  vector_engines.py  vector_vertex.py  vertex.py  vertex_group.py  while_vertex.py  while_vertex_group.py
web_ui/: app.py
web_ui/static/css/: style.css
web_ui/static/js/: app.js  graph.js  workflow.js
web_ui/templates/: config.html  index.html  workflow.html
workflow/: chat.py  service.py
